Created custom access log file based on path

--- a/nginx.conf
+++ b/nginx.conf
@@ -93,5 +93,13 @@ http {
         #--------------------------------------------------------------------------------------------------
         #try_files /thumb.png /greet;
         try_files /cat.png /greet;
+
+        #--------------------------------------------------------------------------------------------------
+        # Create custom access log file based on URL
+        #--------------------------------------------------------------------------------------------------
+        location /secure {
+            access_log /var/log/nginx/secure.access.log;
+            return 200 "This location is secure!";
+        }
     }
 }
