Custom access log file changes

--- a/nginx.conf
+++ b/nginx.conf
@@ -99,6 +99,7 @@ http {
         #--------------------------------------------------------------------------------------------------
         location /secure {
             access_log /var/log/nginx/secure.access.log;
+            access_log /var/log/nginx/access.log;   # To get access log entries in more than one file
             return 200 "This location is secure!";
         }
     }
