Stop access logs for specific files/paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -102,5 +102,13 @@ http {
             access_log /var/log/nginx/access.log;   # To get access log entries in more than one file
             return 200 "This location is secure!";
         }
+
+        #--------------------------------------------------------------------------------------------------
+        # Stop access logs for specific URLs/Files
+        #--------------------------------------------------------------------------------------------------
+        location /font_files {
+            access_log off;
+            return 200 "These are the fonts!";
+        }
     }
 }
