Added changes related to php server processing. Created separate server and user directive used for worker process

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+user www-data;
+
 events {
    
 }
@@ -109,6 +111,25 @@ http {
         location /font_files {
             access_log off;
             return 200 "These are the fonts!";
+        }
+    }
+
+
+    server{
+        listen 80;   
+        server_name 172.28.216.71;
+        root /home/rjiyani/projects/php-demo;
+
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        location ~\.php$ {
+            # Pass php requests to php-fpm service (fastcgi) 
+            include fastcgi.conf;
+            fastcgi_pass unix:/run/php/php7.4-fpm.sock;
         }
     }
 }
