--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,12 @@
 user www-data;
 
-#worker_processes 2;
+# worker_processes : Number of processes at a time nginx could use [Max process = Number of CPU cores]
+# worker_processes 2;
 worker_processes auto;
 
 events {
-   
+   # worker_connections : Number of requests, 1 process/core will handle at a time 
+   worker_connections 1024;
 }
 
 http {
