Added request-response size timeout buffering configurations

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,27 @@ http {
 
     include mime.types;
 
+    #--------------------------------------------------------------------------------------------------
+    # Request-Response buffering size timeout configurations : Start
+    #--------------------------------------------------------------------------------------------------
+    client_body_buffer_size 16k;
+    client_header_buffer_size 1k;
+    client_max_body_size 8m;
+    
+    client_body_timeout 1s;
+    client_header_timeout 1s;
+
+    keepalive_timeout 30s;
+
+    send_timeout 5s;
+
+    sendfile on;
+    tcp_nopush on;
+    #--------------------------------------------------------------------------------------------------
+    # Request-Response buffering size timeout configurations : End
+    #--------------------------------------------------------------------------------------------------
+
+
     server{
         listen 80;
         server_name 172.17.160.201;
@@ -122,7 +143,7 @@ http {
 
     server{
         listen 80;   
-        server_name 172.28.216.71;
+        server_name 172.28.210.154;
         root /home/rjiyani/projects/php-demo;
 
         index index.php index.html;
@@ -133,6 +154,7 @@ http {
 
         location ~\.php$ {
             # Pass php requests to php-fpm service (fastcgi) 
+            # Make sure php${version}-fpm service is up and running in your machine
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.4-fpm.sock;
         }
