Used image_filter

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,8 @@ user www-data;
 # worker_processes 2;
 worker_processes auto;
 
+load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
+
 events {
    # worker_connections : Number of requests, 1 process/core will handle at a time 
    worker_connections 1024;
@@ -157,6 +159,10 @@ http {
             # Make sure php${version}-fpm service is up and running in your machine
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+        }
+
+        location = /thumb.png {
+            image_filter rotate 180;
         }
     }
 }
