Added cache controls and expiry for static files such as css, js, jpg

--- a/nginx.conf
+++ b/nginx.conf
@@ -161,8 +161,15 @@ http {
             fastcgi_pass unix:/run/php/php7.4-fpm.sock;
         }
 
-        location = /thumb.png {
-            image_filter rotate 180;
+        location ~* \.(css|js|jpg|png)$ {
+            # image_filter rotate 180;
+            # add_header my_header "Hello Ravi!";
+
+            access_log off;
+            add_header Cache-Control public;
+            add_header Pragma public;
+            add_header Vary Accept-Encoding;
+            expires 1M;
         }
     }
 }
