gzip compression added

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,16 @@ http {
     # Request-Response buffering size timeout configurations : End
     #--------------------------------------------------------------------------------------------------
 
+    #--------------------------------------------------------------------------------------------------
+    # gzip compression configurations : Start
+    #--------------------------------------------------------------------------------------------------
+    gzip on;
+    gzip_comp_level 3;
+    gzip_types text/css text/javascript;
+    #--------------------------------------------------------------------------------------------------
+    # gzip compression configurations : End
+    #--------------------------------------------------------------------------------------------------
+
 
     server{
         listen 80;
