Added fastcgi_cache configuration for micro cache feature. Tested with Apache Benchmark to validate load time performance

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+
 user www-data;
 
 # worker_processes : Number of processes at a time nginx could use [Max process = Number of CPU cores]
@@ -26,7 +27,6 @@ http {
     client_header_timeout 1s;
 
     keepalive_timeout 30s;
-
     send_timeout 5s;
 
     sendfile on;
@@ -45,6 +45,16 @@ http {
     # gzip compression configurations : End
     #--------------------------------------------------------------------------------------------------
 
+    #--------------------------------------------------------------------------------------------------
+    # Configure micro cache for dynamic content configurations : Start
+    #--------------------------------------------------------------------------------------------------
+    # Configure microcache (fastcgi)
+    fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=ZONE_1:100m inactive=60m;
+    fastcgi_cache_key "$scheme$request_method$host$request_uri"; #Will be hashed using MD5
+
+    #--------------------------------------------------------------------------------------------------
+    # Configure micro cache for dynamic content configurations : End
+    #--------------------------------------------------------------------------------------------------
 
     server{
         listen 80;
@@ -155,7 +165,7 @@ http {
 
     server{
         listen 80;   
-        server_name 172.28.214.134;
+        server_name 192.168.87.90;
         root /home/rjiyani/projects/php-demo;
 
         index index.php index.html;
@@ -169,6 +179,11 @@ http {
             # Make sure php${version}-fpm service is up and running in your machine
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+
+            # Enable Cache
+            fastcgi_cache ZONE_1;
+            fastcgi_cache_valid 200 60m; # This is example of an array directive, which can be used multiple times in same context
+            fastcgi_cache_valid 404 10m;
         }
 
         location ~* \.(css|js|jpg|png)$ {
