Check if cache was being used

--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,7 @@ http {
     # Configure microcache (fastcgi)
     fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=ZONE_1:100m inactive=60m;
     fastcgi_cache_key "$scheme$request_method$host$request_uri"; #Will be hashed using MD5
+    add_header X-Cache $upstream_cache_status;
 
     #--------------------------------------------------------------------------------------------------
     # Configure micro cache for dynamic content configurations : End
