Bypass caching and use runtime hit for dynamic content

--- a/nginx.conf
+++ b/nginx.conf
@@ -171,6 +171,10 @@ http {
 
         index index.php index.html;
 
+        if ($arg_skipcache = 1){
+            set $no_cache 1;
+        }
+
         location / {
             try_files $uri $uri/ =404;
         }
@@ -185,6 +189,9 @@ http {
             fastcgi_cache ZONE_1;
             fastcgi_cache_valid 200 60m; # This is example of an array directive, which can be used multiple times in same context
             fastcgi_cache_valid 404 10m;
+
+            fastcgi_cache_bypass $no_cache;
+            fastcgi_no_cache $no_cache;
         }
 
         location ~* \.(css|js|jpg|png)$ {
