Added self-signed ssl certificate and used in configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -166,6 +166,11 @@ http {
 
     server{
         listen 80;   
+        
+        listen 443 ssl;
+        ssl_certificate /etc/nginx/ssl/self.crt;
+        ssl_certificate_key /etc/nginx/ssl/self.key;
+
         server_name 192.168.87.90;
         root /home/rjiyani/projects/php-demo;
 
