--- a/nginx.conf
+++ b/nginx.conf
@@ -167,7 +167,7 @@ http {
     server{
         listen 80;   
         
-        listen 443 ssl;
+        listen 443 ssl http2;
         ssl_certificate /etc/nginx/ssl/self.crt;
         ssl_certificate_key /etc/nginx/ssl/self.key;
 
