--- a/nginx.conf
+++ b/nginx.conf
@@ -165,8 +165,7 @@ http {
 
 
     server{
-        listen 80;   
-        
+        #listen 80;   
         listen 443 ssl http2;
         ssl_certificate /etc/nginx/ssl/self.crt;
         ssl_certificate_key /etc/nginx/ssl/self.key;
@@ -178,6 +177,11 @@ http {
 
         if ($arg_skipcache = 1){
             set $no_cache 1;
+        }
+
+        location = /index.html {
+            http2_push /style.css;
+            http2_push /thumb.png;
         }
 
         location / {
