Redirect http traffic to https

--- a/nginx.conf
+++ b/nginx.conf
@@ -163,6 +163,12 @@ http {
         }
     }
 
+    # Redirect all http traffic to https 
+    server {
+        listen *:80;
+        server_name 192.168.85.29;
+        return 301 https://$server_name/$request_uri;
+    }
 
     server{
         #listen 80;   
@@ -170,7 +176,7 @@ http {
         ssl_certificate /etc/nginx/ssl/self.crt;
         ssl_certificate_key /etc/nginx/ssl/self.key;
 
-        server_name 192.168.87.90;
+        server_name 192.168.85.29;
         root /home/rjiyani/projects/php-demo;
 
         index index.php index.html;
