Added SSL TLS Session Cache & DHParam in nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -163,7 +163,7 @@ http {
         }
     }
 
-    # Redirect all http traffic to https 
+    # Redirect all HTTP traffic to HTTPS
     server {
         listen *:80;
         server_name 192.168.85.29;
@@ -175,6 +175,25 @@ http {
         listen 443 ssl http2;
         ssl_certificate /etc/nginx/ssl/self.crt;
         ssl_certificate_key /etc/nginx/ssl/self.key;
+
+        # Disable SSL protocol and use TLS protocol
+        # TLS is newer version as SSL is older version and not used any longer
+        # Client-Server connections are encrypted with below protocols only
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+        # Optimise Cipher Suits
+        # Decide which cipher suit (Encryption-Decryption Algo) should be used while using TLS protocol
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!aNULL:!MD5;
+
+        # Enable DH(Diffie Hellman)  Params
+        # Allows server to key exchange with client in complete secrecy
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        # SSL Sessions to cache the connections for certain amount of time, improving connection time
+        ssl_session_cache shared:SSL:40m; # 1) inbuild : used by single worker process 2) shared : used by multiple worker process
+        ssl_session_timeout 4h;
+        ssl_session_tickets on;           # Assign client/browser a ticket which validates SSL session at client side   
 
         server_name 192.168.85.29;
         root /home/rjiyani/projects/php-demo;
