Added rate limitting in nginx conf and testing with Seige tool

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,13 @@ http {
     include mime.types;
 
     #--------------------------------------------------------------------------------------------------
-    # Request-Response buffering size timeout configurations : Start
+    # Define limit zone configurations : To stop brute force attack based on Clients IP, Request URI..
+    #--------------------------------------------------------------------------------------------------
+    # limit_req_zone $binary_remote_addr;
+    limit_req_zone $request_uri zone=MYZONE:10m rate=1r/s;
+
+    #--------------------------------------------------------------------------------------------------
+    # Request-Response buffering size timeout configurations
     #--------------------------------------------------------------------------------------------------
     client_body_buffer_size 16k;
     client_header_buffer_size 1k;
@@ -31,31 +37,22 @@ http {
 
     sendfile on;
     tcp_nopush on;
-    #--------------------------------------------------------------------------------------------------
-    # Request-Response buffering size timeout configurations : End
-    #--------------------------------------------------------------------------------------------------
 
     #--------------------------------------------------------------------------------------------------
-    # gzip compression configurations : Start
+    # gzip compression configurations
     #--------------------------------------------------------------------------------------------------
     gzip on;
     gzip_comp_level 3;
     gzip_types text/css text/javascript;
-    #--------------------------------------------------------------------------------------------------
-    # gzip compression configurations : End
-    #--------------------------------------------------------------------------------------------------
 
     #--------------------------------------------------------------------------------------------------
-    # Configure micro cache for dynamic content configurations : Start
+    # Configure micro cache for dynamic content configurations
     #--------------------------------------------------------------------------------------------------
     # Configure microcache (fastcgi)
     fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=ZONE_1:100m inactive=60m;
     fastcgi_cache_key "$scheme$request_method$host$request_uri"; #Will be hashed using MD5
     add_header X-Cache $upstream_cache_status;
 
-    #--------------------------------------------------------------------------------------------------
-    # Configure micro cache for dynamic content configurations : End
-    #--------------------------------------------------------------------------------------------------
 
     server{
         listen 80;
@@ -208,6 +205,10 @@ http {
             http2_push /style.css;
             http2_push /thumb.png;
         }
+
+        limit_req zone=MYZONE;     # As MYZONE configured to serve 1 request per second, while using Seige tool and 
+                                   # hitting 5 concurrent requests twice (So total 10 request, nginx will serve only 1 request and 
+                                   # for remaining 9 it will return 503 status code (Service Unavailable)
 
         location / {
             try_files $uri $uri/ =404;
