Added limit_req and burst parameter

--- a/nginx.conf
+++ b/nginx.conf
@@ -206,9 +206,14 @@ http {
             http2_push /thumb.png;
         }
 
-        limit_req zone=MYZONE;     # As MYZONE configured to serve 1 request per second, while using Seige tool and 
-                                   # hitting 5 concurrent requests twice (So total 10 request, nginx will serve only 1 request and 
-                                   # for remaining 9 it will return 503 status code (Service Unavailable)
+        limit_req zone=MYZONE burst=5 nodelay;  # If burst and nodelay has not been passed and used below test with Seige
+                                                # siege -v -r 2 -c 5 https://192.168.85.29/thumb.png 
+                                                # As MYZONE configured to serve 1 request per second, while using Seige tool and 
+                                                # hitting 5 concurrent requests twice (So total 10 request, nginx will serve only 1 request and 
+                                                # for remaining 9 it will return 503 status code (Service Unavailable)
+
+                                                # As burst=5 passed, nginx will serve 1 + 5 = total 6 request per second 
+                                                # nodelay parameter indicated without delay of 1 sec serve the request    
 
         location / {
             try_files $uri $uri/ =404;
