Turn off server tokens to be shared with client/browser. Turn on basic auth configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,8 @@ http {
     fastcgi_cache_key "$scheme$request_method$host$request_uri"; #Will be hashed using MD5
     add_header X-Cache $upstream_cache_status;
 
+    # TO stop sharing nginx server information with client/browser, for example nginx version
+    server_tokens off;
 
     server{
         listen 80;
@@ -216,6 +218,9 @@ http {
                                                 # nodelay parameter indicated without delay of 1 sec serve the request    
 
         location / {
+            auth_basic "Secure Area";
+            auth_basic_user_file /etc/nginx/.hhtpasswd;
+
             try_files $uri $uri/ =404;
         }
 
