--- a/nginx.conf
+++ b/nginx.conf
@@ -170,6 +170,11 @@ http {
     }
 
     server{
+
+        server_name 192.168.85.29;
+        root /home/rjiyani/projects/php-demo;
+        index index.php index.html;
+
         #listen 80;   
         listen 443 ssl http2;
         ssl_certificate /etc/nginx/ssl/self.crt;
@@ -194,10 +199,8 @@ http {
         ssl_session_timeout 4h;
         ssl_session_tickets on;           # Assign client/browser a ticket which validates SSL session at client side   
 
-        server_name 192.168.85.29;
-        root /home/rjiyani/projects/php-demo;
-
-        index index.php index.html;
+        # Prevent embedding Cross origin frame (Embeding resource as IFrame option) Click-Jacking
+        add_header X-Frame-Options "SAMEORIGIN";
 
         if ($arg_skipcache = 1){
             set $no_cache 1;
