Prevent cross site scripting by adding header

--- a/nginx.conf
+++ b/nginx.conf
@@ -202,6 +202,9 @@ http {
         # Prevent embedding Cross origin frame (Embeding resource as IFrame option) Click-Jacking
         add_header X-Frame-Options "SAMEORIGIN";
 
+        # Prevent cross site scripting (XSS) 
+        add_header X-XSS-Protection "1; mode=block;"
+
         if ($arg_skipcache = 1){
             set $no_cache 1;
         }
