Adding load-balance.conf to test load balacing with 3 php instance running in back

--- a/nginx.conf
+++ b/nginx.conf
@@ -203,7 +203,7 @@ http {
         add_header X-Frame-Options "SAMEORIGIN";
 
         # Prevent cross site scripting (XSS) 
-        add_header X-XSS-Protection "1; mode=block;"
+        add_header X-XSS-Protection "1; mode=block;";
 
         if ($arg_skipcache = 1){
             set $no_cache 1;
