Added IP based sticky session/routngs and based on active session routing configuration

--- a/load-balancer.conf
+++ b/load-balancer.conf
@@ -3,6 +3,15 @@ events {}
 http {
 
     upstream php_servers {
+
+        # Enables load balancing based on active connections (If one server is taking time to serve request, 
+        # nginx will redirect traffic to other nodes)
+        least_conn;    
+
+        # Enables sticky sessions (IP based) so all requests from particular client goes to one backend server only
+        ip_hash;
+
+        # By default all requests will be served in round robin manner 
         server localhost:10001;
         server localhost:10002;
         server localhost:10003;
